fnished first draft

--- a/src/components/ControlPanel/ControlPanel.css
+++ b/src/components/ControlPanel/ControlPanel.css
@@ -1,5 +1,60 @@
 .control-panel-container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  min-height: 150px;
+}
+
+.control-panel-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+  .control-panel-top-title {
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: darkgrey;
+  }
+
+  .visual-focus-btn {
+    padding: 10px;
+    background-color: rgba(0,0,0,0.075);
+    border-style: none;
+    margin: 10px;
+    font-size: 1em;
+    border-radius: 5px;
+    color: darkgrey;
+    font-family: "Maven Pro";
+    transition: 0.15s ease-in;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  .visual-focus-btn.active {
+    background-color: lightblue;
+    color: white;
+  }
+
+  .visual-focus-btn:hover {
+    transform: scale(1.1);
+  }
+
+  .visual-focus-btn:focus {
+    outline: none;
+  }
+
+.control-panel-separator {
+  height: 1px;
+  width: 50%;
+  background-color: lightgrey;
+}
+.control-panel-bottom {
+  display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: flex-start;
