--- a/src/components/Visualization/Visualization.css
+++ b/src/components/Visualization/Visualization.css
@@ -2,9 +2,6 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: rgba(0,0,0,0.1);
-  height: 500px;
-  width: 100%;
-
-  flex: 3;
+  margin: 25px 50px 100px 50px;
+  flex: none;
 }
