--- a/src/components/ControlPanel/VisualFocusSelector/VisualFocusSelector.css
+++ b/src/components/ControlPanel/VisualFocusSelector/VisualFocusSelector.css
@@ -1,26 +1,26 @@
-.depth-selector-container {
+.visual-focus-selector-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 25px;
 }
 
-.depth-btns {
+.visual-focus-btns {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
-.depth-btns * {
+.visual-focus-btns * {
   margin: 0px 5px 0px 5px;
 }
 
-.control-panel-btn.nodepth-active {
+.control-panel-btn.opacity-active {
   background-color: lightblue;
   color: white;
 }
 
-.control-panel-btn.depth-active {
+.control-panel-btn.scale-active {
   background-color: lightblue;
   color: white;
   -webkit-box-shadow: 0px 6px 40px -2px rgba(0,0,0,0.4);
