--- a/src/components/EntrySection/EntrySection.css
+++ b/src/components/EntrySection/EntrySection.css
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
-  margin-top: 50px;
-  min-height: 250px;
+  justify-content: space-around;
+  width: 50%;
+  margin-top: 25px;
+  min-height: 100px;
+  min-width: 400px;
 }
 
 .entry-section-container * {
@@ -13,10 +15,19 @@
 }
 
 /****ENTRY****/
+.entry {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 20px;
+  width: 100%;
+
+}
 
 .entry-textarea {
   height: 50px;
-  width: 75%;
+  flex: 5;
+  margin-right: 20px;
   border-radius: 10px;
   padding: 10px;
   resize: none;
@@ -24,14 +35,15 @@
   font-size: 1em;
 
   color: rgba(0,0,0,0.25);
-  /*border-color: rgba(0,0,0,0.25);*/
-  border-width: 1px;
+  border-color: rgba(0,0,0,0.1);
+  border-width: 2px;
   border-style: solid;
-  border: none;
-  text-align: center;
+  /*border: none;*/
+  /*text-align: center;*/
 }
 
 .entry-textarea:focus{
+  /*height: 100px;*/
   color: rgba(0,0,0,0.5);
   outline:0;
   border-color: white;
@@ -64,18 +76,14 @@
 /****ANALYZE BUTTON****/
 
 .analyze-text-btn {
-  min-height: 40px;
-  width: 25%;
+  flex: 1;
+  height: 70px;
   max-width: 250px;
-  min-width: 150px;
-  border-radius: 30px;
+  border-radius: 10px;
   border-style: solid;
   border-width: 2px;
   border-color: lightblue;
 
-  /*margin*/
-  margin-top: 25px;
-  margin-bottom: 25px;
 
   background-color: transparent;
   color: lightblue;
@@ -105,7 +113,7 @@
 
 /****SEPARATOR****/
 .separator {
-  height: 1px;
+  height: 2px;
   width: 90%;
-  background-color: lightgrey;
+  background-color: rgba(0,0,0,0.1);
 }
