--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,14 +6,18 @@
   top: 0;
   min-height: 60px;
   width: 100%;
-
-  -webkit-box-shadow: 0px 2.5px 40px -2px rgba(0,0,0,0.15);
-  -moz-box-shadow: 0px 2.5px 40px -2px rgba(0,0,0,0.15);
-  box-shadow: 0px 2.5px 40px -2px rgba(0,0,0,0.15);
+  background-color: rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 2.5px 70px -2px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 2.5px 70px -2px rgba(0,0,0,0.2);
+  box-shadow: 0px 2.5px 70px -2px rgba(0,0,0,0.2);
 
   z-index: 999;
 }
 
 .app-header-title {
   color: lightblue;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font-size: 0.75em;
+
 }
