--- a/src/components/Visualization/Ngram/Ngram.css
+++ b/src/components/Visualization/Ngram/Ngram.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /*transition: 0.2s;*/
 }
 
 .ngram-content{
@@ -11,11 +10,12 @@
   padding: 2.5px;
   transition: 0.2s;
   margin: 2.5px;
-  /*transition: 0.2s;*/
 }
 
 .ngram-content:hover{
-  -webkit-box-shadow: 0px 5px 60px 5px rgba(0,0,0,0.25);
-  -moz-box-shadow: 0px 5px 60px 5px rgba(0,0,0,0.25);
-  box-shadow: 0px 5px 60px 5px rgba(0,0,0,0.25);
+  -webkit-box-shadow: 0px 0px 60px 5px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 0px 60px 5px rgba(0,0,0,0.25);
+  box-shadow: 0px 0px 60px 5px rgba(0,0,0,0.25);
+  transform: scale(1.15);
+  z-index: 999;
 }
