--- a/src/components/Visualization/Visualization.css
+++ b/src/components/Visualization/Visualization.css
@@ -1,7 +1,16 @@
 .visualization-container {
   display: flex;
   flex-direction: row;
+  width: 90%;
+}
+
+.ngrams-container {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  margin: 25px 50px 100px 50px;
-  flex: none;
+  flex: 5;
+}
+
+.json-container {
+  margin-left: 50px;
 }
