--- a/src/components/ControlPanel/DocSentenceFilter/DocSentenceFilter.css
+++ b/src/components/ControlPanel/DocSentenceFilter/DocSentenceFilter.css
@@ -1,9 +1,71 @@
+.doc-sentence-filter-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .doc-traversal {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgba(0,0,0,0.25);
+  flex-direction: column;
+  margin-bottom: 10px;
+}
 
+  .document-selector {
+    cursor: pointer;
+  }
+
+  .document-option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+    background-color: rgba(0,0,0,0.075);
+    color: darkgrey;
+    border-radius: 5px;
+    transition: 0.1s ease-in;
+  }
+
+  .virtualized-select {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 75px;
+    color: darkgrey;
+  }
+
+
+  .document-option:hover {
+      background-color: rgba(0,0,0,0.2);
+      color: white;
+    }
+
+  .chevron {
+    transform: scale(1.5);
+    color: lightgrey;
+    margin-left: 10px;
+    margin-right: 10px;
+    transition: 0.15s ease-in;
+  }
+
+  .chevron:hover {
+    transform: scale(1.75);
+    color: rgba(0,0,0,0.7);
+  }
+
+  .chevron:active {
+    transform: scale(1.5);
+  }
+
+
+
+.sentence-filter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .current-document {
@@ -13,21 +75,4 @@
   margin-left: 5px;
   margin-right: 5px;
   border-radius: 5px;
-}
-
-.doc-traversal-arrow {
-  color: lightgrey;
-  transition: 0.1s ease-in;
-  margin-left: 20px;
-  margin-right: 20px;
-  height: 2em;
-  width: 2em;
-}
-.doc-traversal-arrow:hover {
-  color: grey;
-  transform: scale(1.1);
-}
-
-.doc-traversal-arrow:active {
-  transform: scale(1.0);
 }
