--- a/src/components/EntrySection/EntrySection.css
+++ b/src/components/EntrySection/EntrySection.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  width: 50%;
+  justify-content: center;
   margin-top: 25px;
   min-height: 100px;
   min-width: 400px;
@@ -21,7 +20,6 @@
   align-items: center;
   margin-bottom: 20px;
   width: 100%;
-
 }
 
 .entry-textarea {
@@ -38,8 +36,6 @@
   border-color: rgba(0,0,0,0.1);
   border-width: 2px;
   border-style: solid;
-  /*border: none;*/
-  /*text-align: center;*/
 }
 
 .entry-textarea:focus{
@@ -52,6 +48,63 @@
   box-shadow: 0px 6px 40px -2px rgba(0,0,0,0.3);
 }
 
+/******FLAGS******/
+.input-options {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+
+.input-format-section, .sentiment-model-section, .tokenization-section, .segmentation-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  text-align: center;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.flag-title {
+  font-size: 0.6em;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  color: darkgrey;
+  margin-bottom: 5px;
+}
+
+.flag-btn {
+  border-style: none;
+  min-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 5px;
+
+  margin-left: 5px;
+  margin-right: 5px;
+
+  color: rgba(0,0,0,0.2);
+  background-color: rgba(0,0,0,0.075);
+  font-family: "Maven Pro";
+  font-weight: bold;
+
+  transition: 0.15s ease-in;
+}
+
+.flag-btn.entry-focused {
+  background-color: white;
+}
+
+.flag-btn.active {
+  background-color: lightblue;
+  color: white;
+  outline: none;
+}
+
+input[type=checkbox]:before {
+  color: red;
+}
 /****PLACEHOLDER****/
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -77,7 +130,7 @@
 
 .analyze-text-btn {
   flex: 1;
-  height: 70px;
+  height: 40px;
   max-width: 250px;
   border-radius: 10px;
   border-style: solid;
