--- a/src/components/ControlPanel/ControlPanel.css
+++ b/src/components/ControlPanel/ControlPanel.css
@@ -8,6 +8,16 @@
   margin-bottom: -50px;
 }
 
+  .control-panel-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    min-height: 250px;
+    margin-bottom: -50px;
+  }
+
 .control-panel-top {
   display: flex;
   flex-direction: column;
