--- a/src/components/ControlPanel/DocSentenceFilter/DocSentenceFilter.css
+++ b/src/components/ControlPanel/DocSentenceFilter/DocSentenceFilter.css
@@ -44,19 +44,25 @@
 
   .chevron {
     transform: scale(1.5);
-    color: lightgrey;
+    color: rgba(0,0,0,0.3);
     margin-left: 10px;
     margin-right: 10px;
+
+    background-color: rgba(0,0,0,0.075);
+    border-radius: 5px;
+
     transition: 0.15s ease-in;
   }
 
   .chevron:hover {
-    transform: scale(1.75);
-    color: rgba(0,0,0,0.7);
+    color: rgba(0,0,0,0.5);
   }
 
   .chevron:active {
-    transform: scale(1.5);
+    transform: scale(1.2);
+    background-color: lightblue;
+    color: white;
+
   }
 
 
