--- a/src/components/EntrySection/EntrySection.css
+++ b/src/components/EntrySection/EntrySection.css
@@ -1,25 +1,15 @@
 .entry-section-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  margin-top: 25px;
-  min-height: 100px;
-  min-width: 400px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 50%;
 }
 
 .entry-section-container * {
   transition: 0.25s;
   font-family: "Maven Pro";
-}
-
-/****ENTRY****/
-.entry {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-bottom: 20px;
-  width: 100%;
 }
 
 .entry-textarea {
@@ -35,6 +25,8 @@
   color: rgba(0,0,0,0.25);
   border-color: rgba(0,0,0,0.1);
   border-width: 2px;
+  transition: 0.25s;
+  min-width: 150px;
   border-style: solid;
 }
 
