--- a/src/components/ControlPanel/ControlPanel.css
+++ b/src/components/ControlPanel/ControlPanel.css
@@ -5,7 +5,9 @@
   align-items: center;
   width: 90%;
   min-height: 250px;
-  margin-bottom: -50px;
+  margin-top: 20px;
+  /*background-color: red;*/
+
 }
 
   .control-panel-content {
