--- a/src/components/EntrySection/EntrySection.css
+++ b/src/components/EntrySection/EntrySection.css
@@ -1,10 +1,15 @@
 .entry-section-container {
+  /*
+  display: grid;
+  */
+
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-top: 20px;
-  margin-bottom: 20px;
+  min-height: 100px;
   width: 50%;
+  /*background-color: red;*/
 }
 
 .entry-section-container * {
@@ -26,7 +31,7 @@
   border-color: rgba(0,0,0,0.1);
   border-width: 2px;
   transition: 0.25s;
-  min-width: 150px;
+  min-width: 100px;
   border-style: solid;
 }
 
