--- a/src/components/ControlPanel/DocSentenceFilter/DocSentenceFilter.css
+++ b/src/components/ControlPanel/DocSentenceFilter/DocSentenceFilter.css
@@ -11,6 +11,7 @@
   justify-content: center;
   flex-direction: column;
   /*background-color: red;*/
+  margin-bottom: 10px;
 }
 
   .document-selector {
