--- a/src/components/ControlPanel/ControlPanel.css
+++ b/src/components/ControlPanel/ControlPanel.css
@@ -4,8 +4,9 @@
   justify-content: center;
   align-items: center;
   width: 90%;
-  min-height: 250px;
-  margin-top: 20px;
+  min-height: 200px;
+  margin-top: 40px;
+  margin-bottom: 10px;
   z-index: 999;
 }
 
